src/objects/Product3__c.object
<CustomObject>
    <description>用于产品配置单</description>
    <fields>
        <fullName>Describe__c</fullName>
        <label>描述</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InventoryCommonName__c</fullName>
        <label>存货通用名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialClassification1__c</fullName>
        <label>物料分类</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>其他</fullName>
                </value>
                <value>
                    <fullName>其他-服务</fullName>
                </value>
                <value>
                    <fullName>激光</fullName>
                </value>
                <value>
                    <fullName>超声</fullName>
                </value>
                <value>
                    <fullName>海德堡-耗材</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>歌德-备件</fullName>
                </value>
                <value>
                    <fullName>瑞贝科-配件</fullName>
                </value>
                <value>
                    <fullName>路视-服务</fullName>
                </value>
                <value>
                    <fullName>植入器</fullName>
                </value>
                <value>
                    <fullName>其他-备件</fullName>
                </value>
                <value>
                    <fullName>光太-设备</fullName>
                </value>
                <value>
                    <fullName>罗兰</fullName>
                </value>
                <value>
                    <fullName>徕卡-备件</fullName>
                </value>
                <value>
                    <fullName>瑞贝科-设备</fullName>
                </value>
                <value>
                    <fullName>路视-配件</fullName>
                </value>
                <value>
                    <fullName>DreamLite</fullName>
                </value>
                <value>
                    <fullName>KOWA-配件</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>海涅-备件</fullName>
                </value>
                <value>
                    <fullName>欧堡-备件</fullName>
                </value>
                <value>
                    <fullName>准分子-配件</fullName>
                </value>
                <value>
                    <fullName>飞白</fullName>
                </value>
                <value>
                    <fullName>半标准</fullName>
                </value>
                <value>
                    <fullName>其他-设备</fullName>
                </value>
                <value>
                    <fullName>其他-配件</fullName>
                </value>
                <value>
                    <fullName>光太-耗材</fullName>
                </value>
                <value>
                    <fullName>海德堡-配件</fullName>
                </value>
                <value>
                    <fullName>海德堡-备件</fullName>
                </value>
                <value>
                    <fullName>海德堡-服务</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaterialClassification__c</fullName>
        <label>物料分类</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialCoding__c</fullName>
        <label>物料编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewInventoryCoding__c</fullName>
        <label>新存货编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenQuotationUnitPrice__c</fullName>
        <label>公开报价单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OriginalInventoryCoding__c</fullName>
        <label>原存货编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryUnit__c</fullName>
        <label>主计量单位</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <label>产品线</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationNumber__c</fullName>
        <label>注册证号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipableQuantity__c</fullName>
        <label>可发货数量</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>税率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalPrice0fOpenQuotation__c</fullName>
        <label>公开报价总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>主机</fullName>
                </value>
                <value>
                    <fullName>必选配件</fullName>
                </value>
                <value>
                    <fullName>可选配件</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dyjxs__c</fullName>
        <label>对应代理商经营编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>产品（配置单产品）</label>
    <nameField>
        <label>物料名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>产品（配置单产品）</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>